@@ -9,29 +9,21 @@
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M2</version>
-                <!--<configuration>-->
-                <!--<forkCount>3</forkCount>-->
-                <!--<reuseForks>true</reuseForks>-->
-                <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-                <!--</configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>0.8.3</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
@@ -103,7 +95,7 @@
         <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>jacoco-maven-plugin</artifactId>
-            <version>0.8.2</version>
+            <version>0.8.3</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
